syntax = "proto3";

package v1;

option go_package = "github.com/bungysheep/contact-management/pkg/api/v1/contact";

import "audit.proto";

message Contact {
    string contact_system_code = 1;

    int64 contact_id = 2;

    string first_name = 3;

    string last_name = 4;

    string status = 5;

    v1.Audit audit = 6;
}

message DoReadContactRequest {
    string contact_system_code = 1;

    int64 contact_id = 2;
}

message DoReadContactResponse {
    Contact contact = 1;
}

message DoReadAllContactRequest { 
    string contact_system_code = 1;
}

message DoReadAllContactResponse {
    repeated Contact contact = 1;
}

message DoSaveContactRequest {
    Contact contact = 1;
}

message DoSaveContactResponse {
    bool result = 1;
}

message DoDeleteContactRequest {
    string contact_system_code = 1;

    int64 contact_id = 2;
}

message DoDeleteContactResponse {
    bool result = 1;
}

service ContactService { 
    rpc DoRead (DoReadContactRequest) returns (DoReadContactResponse);

    rpc DoReadAll (DoReadAllContactRequest) returns (DoReadAllContactResponse);

    rpc DoSave (DoSaveContactRequest) returns (DoSaveContactResponse);

    rpc DoDelete (DoDeleteContactRequest) returns (DoDeleteContactResponse);
}